force-app/main/default/objects/Post_Deletion_Audit_Log__c/Post_Deletion_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Post Deletion Audit Log</label>
    <nameField>
        <displayFormat>PDA-{0000000}</displayFormat>
        <label>Post Deletion Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Deletion Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>