force-app/main/default/objects/Post_Deletion_Audit_Log__c/fields/Actual_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deletion_Date__c</fullName>
    <label>Actual Deletion Date</label>
    <type>Date</type>
</CustomField>