force-app/main/default/objects/Post_Deletion_Audit_Log__c/fields/DeletionInvokedinMC__c.field-meta.xml
<CustomField>
    <fullName>DeletionInvokedinMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeletionInvokedinMC</label>
    <type>Checkbox</type>
</CustomField>