force-app/main/default/objects/Post_Deletion_Audit_Log__c/fields/Reason_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deletion__c</fullName>
    <label>Reason for Deletion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>