force-app/main/default/objects/Post_Deletion_Audit_Log__c/fields/Salesforce_Person_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Person_Contact_ID__c</fullName>
    <label>Salesforce Person Contact ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>