force-app/main/default/objects/Post_Deletion_Audit_Log__c/fields/To_be_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>To_be_Deleted_Date__c</fullName>
    <label>To be Deleted Date</label>
    <type>Date</type>
</CustomField>